--- a/notebook/risk_analyzer.ipynb
+++ b/notebook/risk_analyzer.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "5198fd69",
+   "id": "e079b8ec",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "866522d4",
+   "id": "0effae1b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,32 +22,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "051bd4d5",
+   "execution_count": 9,
+   "id": "ea71035c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0    Page\\nPart I\\nItem 1. Business 3\\nItem 1A. Ris...\n",
-       "1    Part II   \\nItem 5. Market for Registrant’s Co...\n",
-       "2    Part III   \\nItem 10. Directors, Executive Off...\n",
-       "Name: Original, dtype: object"
+       "'Part III   \\nItem 10. Directors, Executive Officers and Corporate Governance 78\\nItem 11. Executive Compensation 78\\nItem 12. Security Ownership of Certain Beneficial Owners and Management and Related Stockholder Matters 78\\nItem 13. Certain Relationships and Related Transactions, and Director Independence 78\\nItem 14. Principal Accounting Fees and Services 78\\nItem 15. Exhibits, Financial Statement Schedules 79\\nItem 16. Form 10-K Summary 80'"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df[\"Original\"]"
+    "df[\"Original\"].loc[2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "f0ab1af4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Indicate by check mark whether the registrant is an emerging growth company as defined in Rule 405 of the Securities Act of 1933 ( ⁇ 230.405 of this chapter) or Rule 12b-2 of the Securities Exchange Act of 1934 ( ⁇ 240.12b-2 of this chapter).'"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[\"Summarized\"].loc[2]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "962f3645",
+   "id": "af4e8e38",
    "metadata": {},
    "outputs": [],
    "source": []
