Deploying model with Heroku

--- a/notebook/risk_analyzer.ipynb
+++ b/notebook/risk_analyzer.ipynb
@@ -7,7 +7,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "ae958d32",
+   "id": "86225248",
    "metadata": {},
    "source": [
     "![training_loss_1.png](attachment:training_loss_1.png)"
@@ -20,7 +20,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "a6f19092",
+   "id": "012377da",
    "metadata": {},
    "source": [
     "![training_loss_2.png](attachment:training_loss_2.png)"
@@ -33,7 +33,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "b8140e20",
+   "id": "b64eed4c",
    "metadata": {},
    "source": [
     "![val_df.png](attachment:val_df.png)"
@@ -46,7 +46,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "e45900db",
+   "id": "25d4b2c6",
    "metadata": {},
    "source": [
     "![training_loss.png](attachment:training_loss.png)"
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "68e1a32a",
+   "id": "88b70a13",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a0c57ebd",
+   "id": "a17749aa",
    "metadata": {},
    "source": [
     "# Microsoft"
@@ -73,7 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "fbe7b265",
+   "id": "1b98a213",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,50 +82,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
-   "id": "0240ce84",
+   "execution_count": 147,
+   "id": "ae0bc76b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'11 Note About Forward -Looking Statements  \\nThis report includes estimates, projections, statements relating to our business plans, objectives, and expected operating \\nresults that are ―forward -looking statements‖ within the meaning of the Private Securities Litigation Refo rm Act of 1995, \\nSection  27A of the Securities Act of 1933, and Section  21E of the Securities Exchange Act of 1934. Forward -looking \\nstatements may appear throughout this report, including the following sections: ―Business‖, and ―Management’s \\nDiscussion and Analysis of Financial Condition and Results of Operations‖. These forward -looking statements generally \\nare identified by the words ―believe,‖ ―project,‖ ―expect,‖ ―anticipate,‖ ―estimate,‖ ―intend,‖ ―strategy,‖ ―future,‖ ―opport unity,‖ \\n―plan,‖ ―may,‖ ―shou ld,‖ ―will,‖ ―would,‖ ―will be,‖ ―will continue,‖ ―will likely result,‖ and similar expressions. Forward -looking \\nstatements are based on current expectations and assumptions that are subject to risks and uncertainties that may cause \\nactual results to diffe r materially. We describe risks and uncertainties that could cause actual results and events to differ \\nmaterially in ―Risk Factors,‖ ―Management’s Discussion and Analysis of Financial Condition and Results of Operations,‖ \\nand ―Quantitative and Qualitative Disclosures about Market Risk‖ in our fiscal year 2021 Form 10 -K. Readers are \\ncautioned not to place undue reliance on forward -looking statements, which speak only as of the date they are made. We \\nundertake no obligation to update or revise publicly any fo rward -looking statements, whether because of new information, \\nfuture events, or otherwise.  \\nBUSINESS  \\nGENERAL  \\nEmbracing Our Future  \\nMicrosoft is a technology company whose mission is to empower every person and every organization on the planet to \\nachieve more. We strive to create local opportunity, growth, and impact in every country around the world. Our platforms \\nand tools help drive  small business productivity, large business competitiveness, and public -sector efficiency. They also \\nsupport new startups, improve educational and health outcomes, and empower human ingenuity.  \\nWe bring technology and products together into experiences an d solutions that unlock value for our customers. Our \\necosystem of customers and partners has stepped up to help people and organizations in every country use technology to \\nbe resilient and transform during the most trying of circumstances. Amid rapid chang e we’ve witnessed technology \\nempower telehealth, remote manufacturing, and new ways of working from home and serving customers. These \\ncapabilities have relied on the public cloud, which is built on the investments we have made over time.  \\nWe are living in the new era of the intelligent cloud and intelligent edge, which is being sharpened by rapid advances in \\ndistributed computing, ambient intelligence, and multidevice experiences. This means the places we go and the things we \\ninteract with will increasingly  become digitized, creating new opportunities and new breakthroughs. In the next phase of \\ninnovation, computing is more powerful and ubiquitous from the cloud to the edge. Artificial intelligence (―AI‖) capabilities  \\nare rapidly advancing, fueled by data an d knowledge of the world. Physical and virtual worlds are coming together with \\nthe Internet of Things (―IoT‖) and mixed reality to create richer experiences that understand the context surrounding \\npeople, the things they use, the places they go, and their activities and relationships. A person’s experience with \\ntechnology spans a multitude of devices and has become increasingly more natural and multi -sensory with voice, ink, and \\ngaze interactions.  \\nWhat We Offer  \\nFounded in 1975, we develop and support soft ware, services, devices, and solutions that deliver new value for customers \\nand help people and businesses realize their full potential.  '"
+       "17"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 147,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df[\"Original\"].loc[1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 53,
-   "id": "f6ababcb",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'A description of the risks and uncertainties that could cause our actual results to differ materially from those expressed in our forward-looking statements can be found in our filings with the US Securities and Exchange Commission, including our most recent annual report on Form 10-K.'"
-      ]
-     },
-     "execution_count": 53,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df[\"Summarized\"].loc[1]"
+    "len(df)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "af7e6800",
+   "id": "9e9a02a4",
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +125,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "0f41cbeb",
+   "id": "1a2eed82",
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +146,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "1f5eda42",
+   "id": "9bce47cf",
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +167,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "cc2d7415",
+   "id": "d702d4db",
    "metadata": {},
    "outputs": [
     {
@@ -209,7 +188,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "922b0b90",
+   "id": "c652cec3",
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +209,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "20ad88c0",
+   "id": "ccf50c5d",
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +229,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ef43a081",
+   "id": "05ee62e2",
    "metadata": {},
    "source": [
     "# Wendy's"
@@ -259,7 +238,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "fd191473",
+   "id": "6a3a8092",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "dec64e9b",
+   "id": "8eddaeb4",
    "metadata": {},
    "outputs": [
     {
@@ -290,7 +269,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "511807de",
+   "id": "bfed1ec5",
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +290,7 @@
   {
    "cell_type": "code",
    "execution_count": 109,
-   "id": "354f9837",
+   "id": "684859e2",
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": 108,
-   "id": "af894aea",
+   "id": "bd990de5",
    "metadata": {},
    "outputs": [
     {
@@ -352,7 +331,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3f4bee66",
+   "id": "f3a961ab",
    "metadata": {},
    "source": [
     "# NUANCE COMMUNICATIONS, INC."
@@ -361,7 +340,7 @@
   {
    "cell_type": "code",
    "execution_count": 110,
-   "id": "b04c861a",
+   "id": "9b29d1c1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -371,7 +350,7 @@
   {
    "cell_type": "code",
    "execution_count": 124,
-   "id": "3f0c8b0a",
+   "id": "55b5e3d3",
    "metadata": {},
    "outputs": [
     {
@@ -392,7 +371,7 @@
   {
    "cell_type": "code",
    "execution_count": 123,
-   "id": "a9014b63",
+   "id": "e0900599",
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +392,7 @@
   {
    "cell_type": "code",
    "execution_count": 134,
-   "id": "a3f1eab2",
+   "id": "036e8b40",
    "metadata": {},
    "outputs": [
     {
@@ -434,7 +413,7 @@
   {
    "cell_type": "code",
    "execution_count": 133,
-   "id": "b80654f1",
+   "id": "dfa51cbb",
    "metadata": {},
    "outputs": [
     {
@@ -455,7 +434,7 @@
   {
    "cell_type": "code",
    "execution_count": 146,
-   "id": "54420ce2",
+   "id": "bbd6fe06",
    "metadata": {},
    "outputs": [
     {
@@ -476,7 +455,7 @@
   {
    "cell_type": "code",
    "execution_count": 144,
-   "id": "5ea258aa",
+   "id": "dff79f82",
    "metadata": {},
    "outputs": [
     {
@@ -497,7 +476,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0d058f96",
+   "id": "1c42b12e",
    "metadata": {},
    "outputs": [],
    "source": []
